--- a/Pipfile
+++ b/Pipfile
@@ -6,8 +6,8 @@ verify_ssl = true
 [dev-packages]
 
 [packages]
-flask-socketio = "==3.1.2"
-Flask = "==1.0.2"
+flask-socketio = "*"
+Flask = "*"
 
 [requires]
 python_version = "3.6"
